--- a/frontend/src/pages/steps/setupOtp/SetUpOtp.module.css
+++ b/frontend/src/pages/steps/setupOtp/SetUpOtp.module.css
@@ -1,20 +1,20 @@
-
-.otp{
-    margin-top:40px;
-    display: flex;
-    justify-content: space-evenly;
+.container{
+   margin-top:40px;
+   display: flex;
+   justify-content: space-evenly;
 }
 .input{
-    height:40px;
-    width:40px;
     background-color: #454545;
+    padding:15px;
+    font-size:20px;
+    font-weight: 600;
     border:none;
     outline:none;
-    border-radius: 10px;
-    
+    border-radius: 10px;  
 }
 .para{
     color:#C4C5C5;
     text-align: center;
     margin-top:25px;
+    cursor:pointer;
 }
